<resources>
    <string name="app_name">Corona</string>
    <string name="pleaseselectcountry">Please Select a Country</string>
    <string name="show_all_countries">Show All Countries</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="active">Active</string>
    <string name="cases">Cases</string>
    <string name="world">World Total</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="today_confirmed">Today Cases</string>
    <string name="confirmed">Total Cases</string>
    <string name="connectionproblem">Connection Problem</string>
    <string-array name="countriesNew">
        <item>Please Select a Country</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Bulgaria</item>
        <item>Brazil</item>
        <item>Canada</item>
        <item>Chile</item>
        <item>China</item>
        <item>Croatia</item>
        <item>Czechia</item>
        <item>Denmark</item>
        <item>Ecuador</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Finland</item>
        <item>France</item>
        <item>Israel</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Luxembourg</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Norway</item>
        <item>Pakistan</item>
        <item>Peru</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Serbia</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>S. Korea</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>Ukraine</item>
        <item>Spain</item>
        <item>USA</item>
        <item>United Kingdom</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Aland Islands</item>
        <item>American Samoa</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antigua and Barbuda</item>
        <item>Antarctica</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Benin</item>
        <item>Belize</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Aruba</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Brunei Darussalam</item>
        <item>Bonaire,Sint Eustatius and Saba</item>
        <item>Belarus</item>
        <item>Barbados</item>
        <item>British Indian Ocean Territory</item>
        <item>Bermuda</item>
        <item>Cameroon</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Cambodia</item>
        <item>Central African Republic</item>
        <item>Botswana</item>
        <item>Chad</item>
        <item>Bouvet Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Costa Rica</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Cook Islands</item>
        <item>Cyprus</item>
        <item>Christmas Island</item>
        <item>Dominican Republic</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>the Democratic Republic of the Congo </item>
        <item>Dominica</item>
        <item>Equatorial Guinea</item>
        <item>Cuba</item>
        <item>Eritrea</item>
        <item>Djibouti</item>
        <item>Fiji</item>
        <item>Faroe Islands</item>
        <item>El Salvador</item>
        <item>Egypt</item>
        <item>French Southern Territories</item>
        <item>French Polynesia</item>
        <item>Ghana</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Falkland Islands (Malvinas)</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Gabon</item>
        <item>French Guiana</item>
        <item>Guinea</item>
        <item>Gambia</item>
        <item>Guinea-Bissau</item>
        <item>Honduras</item>
        <item>Gibraltar</item>
        <item>Georgia</item>
        <item>Greenland</item>
        <item>Holy See (Vatican City State)</item>
        <item>Guatemala</item>
        <item>Guernsey</item>
        <item>Guam</item>
        <item>Isle of Man</item>
        <item>Guyana</item>
        <item>Hong Kong</item>
        <item>Haiti</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Jersey</item>
        <item>Iceland</item>
        <item>Iraq</item>
        <item>Jamaica</item>
        <item>Democratic Peoples Republic of Korea</item>
        <item>Latvia</item>
        <item>Liechtenstein</item>
        <item>Madagascar</item>
        <item>Malta</item>
        <item>Mayotte</item>
        <item>Mongolia</item>
        <item>Myanmar</item>
        <item>New Caledonia</item>
        <item>Niue</item>
        <item>Jordan</item>
        <item>Lebanon</item>
        <item>Lithuania</item>
        <item>Malawi</item>
        <item>Marshall Islands</item>
        <item>Kenya</item>
        <item>Mexico</item>
        <item>Kyrgyzstan</item>
        <item>Montenegro</item>
        <item>Kiribati</item>
        <item>Liberia</item>
        <item>Lao Peoples Democratic Republic</item>
        <item>Macao</item>
        <item>Libya</item>
        <item>Maldives</item>
        <item>Macedonia</item>
        <item>Mauritania</item>
        <item>Mali</item>
        <item>Mauritius</item>
        <item>Namibia</item>
        <item>Moldova</item>
        <item>Morocco</item>
        <item>Norfolk Island</item>
        <item>Nepal</item>
        <item>Paraguay</item>
        <item>Niger</item>
        <item>Monaco</item>
        <item>Mozambique</item>
        <item>Nigeria</item>
        <item>Oman</item>
        <item>Saint Lucia</item>
        <item>San Marino</item>
        <item>Palau</item>
        <item>Seychelles</item>
        <item>Puerto Rico</item>
        <item>South Sudan</item>
        <item>Rwanda</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Saint Martin (French part)</item>
        <item>Taiwan</item>
        <item>Sao Tome and Principe</item>
        <item>Togo</item>
        <item>Sierra Leone</item>
        <item>Solomon Islands</item>
        <item>Uruguay</item>
        <item>Swaziland</item>
        <item>British Virgin Islands</item>
        <item>Tajikistan</item>
        <item>Tokelau</item>
        <item>Turkmenistan</item>
        <item>United Arab Emirates</item>
        <item>Uzbekistan</item>
        <item>U.S. Virgin Islands</item>
        <item>Zimbabwe</item>
        <item>Kazakhstan</item>
        <item>Kuwait</item>
        <item>Lesotho</item>
        <item>Malaysia</item>
        <item>Martinique</item>
        <item>Federated States of Micronesia</item>
        <item>Montserrat</item>
        <item>Nauru</item>
        <item>Nicaragua</item>
        <item>Northern Mariana Islands</item>
        <item>Panama</item>
        <item>Pitcairn</item>
        <item>Reunion</item>
        <item>Saint Helena,Ascension and Tristan da Cunha</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Senegal</item>
        <item>Sint Maarten (Dutch part)</item>
        <item>South Africa</item>
        <item>Sudan</item>
        <item>Trinidad and Tobago</item>
        <item>Tuvalu</item>
        <item>Venezuela</item>
        <item>Papua New Guinea</item>
        <item>Saint Kitts and Nevis</item>
        <item>Samoa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>Suriname</item>
        <item>Syria</item>
        <item>Timor-Leste</item>
        <item>Tunisia</item>
        <item>Uganda</item>
        <item>United States Minor Outlying Islands</item>
        <item>Vietnam</item>
        <item>Palestine</item>
        <item>Philippines</item>
        <item>Qatar</item>
        <item>Saint Barthelemy</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saudi Arabia</item>
        <item>Singapore</item>
        <item>Somalia</item>
        <item>Sri Lanka</item>
        <item>Tanzania</item>
        <item>Tonga</item>
        <item>Turks and Caicos Islands</item>
        <item>Vanuatu</item>
        <item>Wallis and Futuna</item>
        <item>Zambia</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
    </string-array>
</resources>