<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/myCardview"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_Countryname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            android:gravity="center"
            android:text="Türkiye"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/primary_light"
            android:orientation="horizontal"
            android:padding="5dp"
            android:textAlignment="textEnd">

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.25"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical"
                    android:text="@string/confirmed"
                    android:textAlignment="textStart"
                    android:textColor="@color/secondary_text"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical"
                    android:text="@string/deaths"
                    android:textAlignment="textStart"
                    android:textColor="@color/secondary_text"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical"
                    android:text="@string/recovered"
                    android:textAlignment="textStart"
                    android:textColor="@color/secondary_text"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical"
                    android:text="@string/active"
                    android:textAlignment="textStart"
                    android:textColor="@color/secondary_text"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.25"
                android:background="@color/primary_light"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/txt_confirmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:text="100000"
                    android:textAlignment="textEnd"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_deaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:text="100000"
                    android:textAlignment="textEnd"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:text="100000"
                    android:textAlignment="textEnd"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:text="100000"
                    android:textAlignment="textEnd"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="3dp"
                android:layout_height="100dp"
                android:background="@color/primary_line"
                android:paddingLeft="3dp"
                android:paddingRight="3dp" />
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:background="@color/primary_light"
                android:padding="4dp"
                android:textAlignment="textStart">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical"
                    android:text="@string/today_confirmed"
                    android:textAlignment="textStart"
                    android:textColor="@color/secondary_text"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical"
                    android:text="@string/today_deaths"
                    android:textAlignment="textStart"
                    android:textColor="@color/secondary_text"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.25"
                android:background="@color/primary_light"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/today_confirmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:text="x"
                    android:textAlignment="textEnd"
                    android:textColor="@color/secondary_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/today_deaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:text="xxx"
                    android:textAlignment="textEnd"
                    android:textColor="@color/secondary_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>

